--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
 
-
-
-
-<h1> <b>Gatos</b></h1/h1>
+<h1> <b>Gatos</b></h1>
 
 <p>Acredita-se que os felinos <i>possuem uma grande capacidade psíquica</i> que é capaz de não só sentir as energias negativas como absorvê-las e eliminá-las de dentro de casa. Segundo a crença, quando o gato repousa por muito tempo, ele está transformando as energias negativas.</p>
 
