--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     
 
-<h1> <b>Gatos</b></h1>
+<h1 id="titiloPrincipal"> <b>Gatos</b></h1>
 
-<p>Acredita-se que os felinos <i>possuem uma grande capacidade psíquica</i> que é capaz de não só sentir as energias negativas como absorvê-las e eliminá-las de dentro de casa. Segundo a crença, quando o gato repousa por muito tempo, ele está transformando as energias negativas.</p>
+<p class="paragrafo">Acredita-se que os felinos <i>possuem uma grande capacidade psíquica</i> que é capaz de não só sentir as energias negativas como absorvê-las e eliminá-las de dentro de casa. Segundo a crença, quando o gato repousa por muito tempo, ele está transformando as energias negativas.</p>
 
-<p>Por conta dessa suposta capacidade, <b>algumas pessoas energizam cartas de tarot</b> esfregando elas nas costas do gato. Entretanto, não existe nenhuma comprovação científica sobre esse mito que rodeia os gatos.</p> 
+<p class="paragrafo">Por conta dessa suposta capacidade, <b>algumas pessoas energizam cartas de tarot</b> esfregando elas nas costas do gato. Entretanto, não existe nenhuma comprovação científica sobre esse mito que rodeia os gatos.</p> 
 
 </body>
 </html>
