--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+    conttent="width=device-width,initial-scale=1.0">
     
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
